--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -21,6 +21,7 @@
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.dev.ui.views.jobs.JobsView"
             id="com.cloudbees.eclipse.ui.views.JobsView"
+            restorable="false"
             allowMultiple="true">
         </view>
     </extension>
