--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -7,7 +7,7 @@
 		</category>
 		<command categoryId="com.cloudbees.eclipse.run.ui.commands.category"
 			defaultHandler="com.cloudbees.eclipse.run.ui.contributions.handlers.CBSampleWebAppHandler"
-			id="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp" name="New Web Application...">
+			id="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp" name="New CloudBees Project">
 		</command>
 		<command categoryId="com.cloudbees.eclipse.run.ui.commands.category"
 			defaultHandler="com.cloudbees.eclipse.run.ui.contributions.handlers.ReferenceHandler"
@@ -26,7 +26,7 @@
 		<menuContribution allPopups="false"
 			locationURI="menu:com.cloudbees.eclipse.run.ui.commands.referenceToMenu">
 			<command commandId="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp"
-				icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" label="New Web Application..."
+				icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" label="New CloudBees Project..."
 				mnemonic="N" style="push" tooltip="Create a sample web application">
 			</command>
 		</menuContribution>
@@ -90,7 +90,7 @@
 		<wizard category="com.cloudbees.eclipse.run.ui"
 			class="com.cloudbees.eclipse.run.ui.wizards.CBSampleWebAppWizard"
 			icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" id="com.cloudbees.eclipse.run.ui.wizards.CBSampleWebAppWizard"
-			name="New Web App" project="true">
+			name="CloudBees Project" project="true">
 		</wizard>
 	</extension>
 	<extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
