--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -3,11 +3,11 @@
 <plugin>
 	<extension point="org.eclipse.ui.commands">
 		<category id="com.cloudbees.eclipse.run.ui.commands.category"
-			name="CloudBees RUN@Cloud">
+			name="CloudBees RUN@cloud">
 		</category>
 		<command categoryId="com.cloudbees.eclipse.run.ui.commands.category"
 			defaultHandler="com.cloudbees.eclipse.run.ui.contributions.handlers.CBSampleWebAppHandler"
-			id="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp" name="New Web Application...">
+			id="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp" name="New CloudBees Project...">
 		</command>
 		<command categoryId="com.cloudbees.eclipse.run.ui.commands.category"
 			defaultHandler="com.cloudbees.eclipse.run.ui.contributions.handlers.ReferenceHandler"
@@ -26,8 +26,8 @@
 		<menuContribution allPopups="false"
 			locationURI="menu:com.cloudbees.eclipse.run.ui.commands.referenceToMenu">
 			<command commandId="com.cloudbees.eclipse.run.ui.commands.newSampleWebApp"
-				icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" label="New Web Application..."
-				mnemonic="N" style="push" tooltip="Create a sample web application">
+				icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" label="New CloudBees Project..."
+				mnemonic="N" style="push" tooltip="Create a sample CloudBees project">
 			</command>
 		</menuContribution>
 	</extension>
@@ -90,7 +90,7 @@
 		<wizard category="com.cloudbees.eclipse.run.ui"
 			class="com.cloudbees.eclipse.run.ui.wizards.CBSampleWebAppWizard"
 			icon="icons/16x16/cb_new_proj_wiz_ico_16x16.png" id="com.cloudbees.eclipse.run.ui.wizards.CBSampleWebAppWizard"
-			name="New Web App" project="true">
+			name="CloudBees Project" project="true">
 		</wizard>
 	</extension>
 	<extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
@@ -121,9 +121,9 @@
 		<shortcut
 			class="com.cloudbees.eclipse.run.ui.launchconfiguration.CBLaunchShortcut"
 			icon="icons/16x16/cb_plain.png" id="com.cloudbees.eclipse.run.ui.launchconfiguration.shortcut"
-			label="CloudBees Application" modes="run, debug">
+			label="CloudBees Application (local)" modes="run, debug">
 			<contextualLaunch>
-				<contextLabel label="CloudBees Application" mode="run, debug">
+				<contextLabel label="CloudBees Application (local)" mode="run, debug">
 				</contextLabel>
 				<enablement>
 					<with variable="selection">
@@ -145,9 +145,9 @@
 		<shortcut
 			class="com.cloudbees.eclipse.run.ui.launchconfiguration.CBCloudLaunchShortcut"
 			icon="icons/16x16/cb_plain.png" id="com.cloudbees.eclipse.run.ui.launchcloudconfiguration.shortcut"
-			label="Deploy CloudBees Application" modes="run">
+			label="CloudBees Application (RUN@cloud)@" modes="run">
 			<contextualLaunch>
-				<contextLabel label="Deploy CloudBees Application"
+				<contextLabel label="CloudBees Application (RUN@cloud)@"
 					mode="run, debug">
 				</contextLabel>
 				<enablement>
