renamed c.c.e.sdk -> c.c.e.run.sdk

--- a/com.cloudbees.eclipse.run.sdk/.project
+++ b/com.cloudbees.eclipse.run.sdk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.cloudbees.eclipse.sdk</name>
+	<name>com.cloudbees.eclipse.run.sdk</name>
 	<comment></comment>
 	<projects>
 	</projects>
