updated build properties

--- a/com.cloudbees.eclipse.run.core/build.properties
+++ b/com.cloudbees.eclipse.run.core/build.properties
@@ -1,2 +1,8 @@
 bin.includes = META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               schema/com.cloudbees.eclipse.run.core.processLifecycleHook.exsd,\
+               scripts/,\
+               projects/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
