--- a/com.cloudbees.eclipse.core/.settings/org.eclipse.jdt.core.prefs
+++ b/com.cloudbees.eclipse.core/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,8 @@
-#Sat Dec 18 14:13:08 EET 2010
+#Tue Apr 12 17:29:18 EEST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
