--- a/com.cloudbees.eclipse.run.core/plugin.xml
+++ b/com.cloudbees.eclipse.run.core/plugin.xml
@@ -38,7 +38,7 @@
 			class="com.cloudbees.eclipse.run.core.wst.RunCloudServerDelegate"
 			description="RUN@cloud Local instance" hasConfiguration="true"
 			id="com.cloudbees.eclipse.core.runcloud.local" initialState="stopped"
-			launchConfigId="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationTypecom.cloudbees.eclipse.run.core.launchcloudconfiguration.launchConfigurationType"
+			launchConfigId="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
 			launchModes="run,stop" name="RUN@cloud Local instance" runtime="false"
 			runtimeTypeId="com.cloudbees.eclipse.core.runcloud.local"
 			supportsRemoteHosts="true">
