--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -74,4 +74,15 @@
         </editor>
     </extension>
     
+ <extension
+       point="org.eclipse.ui.console.consolePageParticipants">
+    <consolePageParticipant
+          class="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant"
+          id="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant">
+       <enablement>
+           <test property="org.eclipse.ui.console.consoleTypeTest" value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole"/>
+       </enablement>
+    </consolePageParticipant>
+ </extension>
+    
 </plugin>
