--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -73,16 +73,72 @@
             name="Build details">
         </editor>
     </extension>
-    
- <extension
-       point="org.eclipse.ui.console.consolePageParticipants">
-    <consolePageParticipant
-          class="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant"
-          id="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant">
-       <enablement>
-           <test property="org.eclipse.ui.console.consoleTypeTest" value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole"/>
-       </enablement>
-    </consolePageParticipant>
- </extension>
-    
+    <extension
+        point="org.eclipse.ui.console.consolePageParticipants">
+        <consolePageParticipant
+            class="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant"
+            id="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsolePageParticipant">
+            <enablement>
+                <test
+                    property="org.eclipse.ui.console.consoleTypeTest"
+                    value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole" />
+            </enablement>
+        </consolePageParticipant>
+    </extension>
+    <extension
+        point="org.eclipse.ui.console.consolePatternMatchListeners">
+        <consolePatternMatchListener
+            class="org.eclipse.jdt.internal.debug.ui.console.JavaConsoleTracker"
+            regex="\(\S*${java_extensions_regex}\S*\)"
+            qualifier="${java_extensions_regex}"
+            id="org.eclipse.builds.ui.console.JavaConsoleTracker">
+            <enablement>
+                <or>
+                    <test
+                        property="org.eclipse.ui.console.consoleTypeTest"
+                        value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole" />
+                </or>
+            </enablement>
+        </consolePatternMatchListener>
+        <consolePatternMatchListener
+            class="org.eclipse.jdt.internal.debug.ui.console.JavaNativeConsoleTracker"
+            regex="\(Native Method\)"
+            qualifier="Native Method"
+            id="org.eclipse.builds.ui.console.JavaNativeConsoleTracker">
+            <enablement>
+                <or>
+                    <test
+                        property="org.eclipse.ui.console.consoleTypeTest"
+                        value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole" />
+                </or>
+            </enablement>
+        </consolePatternMatchListener>
+        <consolePatternMatchListener
+            class="org.eclipse.jdt.internal.debug.ui.console.JavaExceptionConsoleTracker"
+            regex="\w[^\(\s]+Exception[\s|:]"
+            qualifier="Exception"
+            id="org.eclipse.builds.ui.console.JavaExceptionConsoleTracker">
+            <enablement>
+                <or>
+                    <test
+                        property="org.eclipse.ui.console.consoleTypeTest"
+                        value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole" />
+                </or>
+            </enablement>
+        </consolePatternMatchListener>
+        <consolePatternMatchListener
+            class="com.cloudbees.eclipse.dev.ui.views.jobs.UrlConsoleTracker"
+            id="org.eclipse.builds.ui.console.UrlConsoleTracker"
+            qualifier="://"
+            regex="([a-zA-Z][a-zA-Z+.-]{0,10}://[a-zA-Z0-9%._~!$&amp;?#&apos;()*+,;:@/=-]*[a-zA-Z0-9%_~!$&amp;?#&apos;(*+;:@/=-])">
+            <enablement>
+                <or>
+                    <test
+                        property="org.eclipse.ui.console.consoleTypeTest"
+                        value="com.cloudbees.eclipse.dev.ui.views.jobs.JobConsole">
+                    </test>
+                </or>
+            </enablement>
+        </consolePatternMatchListener>
+    </extension>    
 </plugin>
