--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -20,7 +20,16 @@
             icon="icons/cb_run_wheel_topleft.png"
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.dev.ui.views.jobs.JobsView"
-            id="com.cloudbees.eclipse.ui.views.JobsView"
+            id="com.cloudbees.eclipse.dev.ui.views.jobs.JobsView"
+            restorable="false"
+            allowMultiple="true">
+        </view>
+        <view
+            name="Build History"
+            icon="icons/cb_run_wheel_topleft.png"
+            category="com.cloudbees.eclipse"
+            class="com.cloudbees.eclipse.dev.ui.views.build.BuildHistoryView"
+            id="com.cloudbees.eclipse.dev.ui.views.build.BuildHistoryView"
             restorable="false"
             allowMultiple="true">
         </view>
@@ -51,7 +60,7 @@
             <view
                 relative="org.eclipse.ui.views.ProblemView"
                 relationship="stack"
-                id="com.cloudbees.eclipse.ui.views.JobsView">
+                id="com.cloudbees.eclipse.dev.ui.views.jobs.JobsView">
             </view>
         </perspectiveExtension>
         <perspectiveExtension
@@ -59,7 +68,23 @@
             <view
                 relative="org.eclipse.ui.views.TaskList"
                 relationship="stack"
-                id="com.cloudbees.eclipse.ui.views.JobsView">
+                id="com.cloudbees.eclipse.dev.ui.views.jobs.JobsView">
+            </view>
+        </perspectiveExtension>
+        <perspectiveExtension
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
+            <view
+                relative="org.eclipse.ui.views.ProblemView"
+                relationship="stack"
+                id="com.cloudbees.eclipse.dev.ui.views.build.BuildHistoryView">
+            </view>
+        </perspectiveExtension>
+        <perspectiveExtension
+            targetID="org.eclipse.ui.resourcePerspective">
+            <view
+                relative="org.eclipse.ui.views.TaskList"
+                relationship="stack"
+                id="com.cloudbees.eclipse.dev.ui.views.build.BuildHistoryView">
             </view>
         </perspectiveExtension>
     </extension>
