--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -142,4 +142,13 @@
             </action>
         </objectContribution>
     </extension>
+    <extension
+          point="org.eclipse.ui.perspectives">
+       <perspective
+             class="com.cloudbees.eclipse.ui.PerspectiveFactory"
+             icon="icons/16x16/cb_plain.png"
+             id="com.cloudbees.eclipse.ui.perspective"
+             name="CloudBees">
+       </perspective>
+    </extension>
 </plugin>
