--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -145,9 +145,9 @@
     <extension
           point="org.eclipse.ui.perspectives">
        <perspective
-             class="com.cloudbees.eclipse.ui.PerspectiveFactory"
+             class="org.eclipse.jdt.internal.ui.JavaPerspectiveFactory"
              icon="icons/16x16/cb_plain.png"
-             id="com.cloudbees.eclipse.ui.perspective"
+             id="com.cloudbees.eclipse.ui.CloudBeesPerspective"
              name="CloudBees">
        </perspective>
     </extension>
