Separated WST from rest of the project

--- a/com.cloudbees.eclipse.updatesite-feature/buckminster_product.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/buckminster_product.properties
@@ -1,5 +1,5 @@
-buckminster.output.root=G:/cbreleng/output
-buckminster.temp.root=G:/cbreleng/temp
+buckminster.output.root=/home/if/tmp/output
+buckminster.temp.root=/home/if/tmp/temp
 
 # How .qualifier in versions should be replaced
 # qualifier.replacement.*=generator:lastRevision
