--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="com.cloudbees.eclipse.run.ui.launchDelegateAditions" name="launchDelegateAditions" schema="schema/com.cloudbees.eclipse.run.ui.launchDelegateAditions.exsd"/>
 	<extension point="org.eclipse.ui.commands">
 		<category id="com.cloudbees.eclipse.run.ui.commands.category"
 			name="CloudBees RUN@cloud">
@@ -213,22 +214,6 @@
 				</enablement>
 			</contextualLaunch>
 		</shortcut>
-	</extension>
-	<extension point="org.eclipse.wst.server.ui.wizardFragments">
-		<fragment class="com.cloudbees.eclipse.run.ui.wizards.RunCloudServer"
-			id="com.cloudbees.eclipse.core.runcloud" typeIds="com.cloudbees.eclipse.core.runcloud">
-		</fragment>
-		<fragment class="com.cloudbees.eclipse.run.ui.wizards.RunCloudLocal"
-			id="com.cloudbees.eclipse.core.runcloud.local" typeIds="com.cloudbees.eclipse.core.runcloud.local">
-		</fragment>
-	</extension>
-	<extension point="org.eclipse.wst.server.ui.serverImages">
-		<image icon="icons/16x16/cb_plain.png" id="com.cloudbees.eclipse.run.ui.server.image"
-			typeIds="com.cloudbees.eclipse.core.runcloud">
-		</image>
-		<image icon="icons/16x16/cb_plain.png" id="com.cloudbees.eclipse.run.ui.server.image"
-			typeIds="com.cloudbees.eclipse.core.runcloud.local">
-		</image>
 	</extension>
 	<extension point="org.eclipse.debug.core.launchConfigurationTypes">
 		<launchConfigurationType
