Changed CB project decorator location BOTTOM_RIGHT -> TOP_LEFT

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -59,7 +59,7 @@
             id="com.cloudbees.eclipse.ui.project"
             label="%project.decorator.label"
             lightweight="true"
-            location="BOTTOM_RIGHT"
+            location="TOP_LEFT"
             state="true">
             <enablement>
                 <and>
