--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -111,6 +111,14 @@
 			<action class="com.cloudbees.eclipse.run.ui.popup.actions.StartAction"
 				enablesFor="1" id="com.cloudbees.eclipse.run.ui.deploy.cloud" label="Start in RUN@cloud@">
 			</action>
+   <visibility>
+      <and>
+         <objectState
+               name="status"
+               value="stopped">
+         </objectState>
+      </and>
+   </visibility>
 		</objectContribution>
 		<objectContribution
         adaptable="false"
@@ -120,6 +128,18 @@
 			<action class="com.cloudbees.eclipse.run.ui.popup.actions.StopAction"
 				enablesFor="1" id="com.cloudbees.eclipse.run.ui.deploy.cloud" label="Stop in RUN@cloud@">
 			</action>
+   <visibility>
+      <or>
+         <objectState
+               name="status"
+               value="hibernate">
+         </objectState>
+         <objectState
+               name="status"
+               value="active">
+         </objectState>
+      </or>
+   </visibility>
 		</objectContribution>
   <objectContribution
         adaptable="false"
@@ -286,6 +306,9 @@
           class="com.cloudbees.eclipse.run.ui.views.ApplicationInfoAdapterFactory">
        <adapter
              type="org.eclipse.ui.views.properties.IPropertySource">
+       </adapter>
+       <adapter
+             type="org.eclipse.ui.IActionFilter">
        </adapter>
     </factory>
  </extension>
