--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -194,8 +194,7 @@
     <extension
           point="com.cloudbees.eclipse.ui.cbTreeProvider">
        <cbTreeProvider
-             class="com.cloudbees.eclipse.dev.ui.views.instances.ForgeTreeView">
-       </cbTreeProvider>
+             class="com.cloudbees.eclipse.dev.ui.views.forge.ForgeTreeView      </cbTreeProvider>
     </extension>
      
 </plugin>
