--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -35,99 +35,6 @@
 	<extension point="org.eclipse.ui.popupMenus">
   <objectContribution
         adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.delete"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-     <action
-           class="com.cloudbees.eclipse.run.ui.popup.actions.DeleteAction"
-           enablesFor="1"
-           id="com.cloudbees.eclipse.run.ui.action.delete"
-           label="Delete in RUN@cloud@">
-     </action>
-  </objectContribution>
-  <objectContribution
-        adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.showProperties"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-     <action
-           class="com.cloudbees.eclipse.run.ui.popup.actions.ShowPropertiesAction"
-           enablesFor="1"
-           id="com.cloudbees.eclipse.run.ui.action.showProperties"
-           label="Properties">
-     </action>
-  </objectContribution>
-  <objectContribution
-        adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.tail.error"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-     <action
-           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailErrorLogAction"
-           enablesFor="1"
-           id="com.cloudbees.eclipse.run.ui.action.tail.error"
-           label="Tail Error Log">
-     </action>
-  </objectContribution>
-  <objectContribution
-        adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.tail.access"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-     <action
-           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailAccessLogAction"
-           enablesFor="1"
-           id="com.cloudbees.eclipse.run.ui.action.tail.access"
-           label="Tail Access Log">
-     </action>
-  </objectContribution>
-  <objectContribution
-        adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.tail.server"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-     <action
-           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailServerLogAction"
-           enablesFor="1"
-           id="com.cloudbees.eclipse.run.ui.action.tail.server"
-           label="Tail Server Log">
-     </action>
-  </objectContribution>
-		<objectContribution
-        adaptable="true"
-        id="com.cloudbees.eclipse.run.ui.start"
-        nameFilter="*"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-			<action class="com.cloudbees.eclipse.run.ui.popup.actions.StartAction"
-				enablesFor="1" id="com.cloudbees.eclipse.run.ui.deploy.cloud" label="Start in RUN@cloud@">
-			</action>
-   <visibility>
-      <and>
-         <objectState
-               name="status"
-               value="stopped">
-         </objectState>
-      </and>
-   </visibility>
-		</objectContribution>
-		<objectContribution
-        adaptable="false"
-        id="com.cloudbees.eclipse.run.ui.stop"
-        nameFilter="*"
-        objectClass="com.cloudbees.api.ApplicationInfo">
-			<action class="com.cloudbees.eclipse.run.ui.popup.actions.StopAction"
-				enablesFor="1" id="com.cloudbees.eclipse.run.ui.deploy.cloud" label="Stop in RUN@cloud@">
-			</action>
-   <visibility>
-      <or>
-         <objectState
-               name="status"
-               value="hibernate">
-         </objectState>
-         <objectState
-               name="status"
-               value="active">
-         </objectState>
-      </or>
-   </visibility>
-		</objectContribution>
-  <objectContribution
-        adaptable="false"
         id="com.cloudbees.eclipse.run.ui.refreshRunAtCloudApps"
         objectClass="java.lang.String">
      <action
@@ -145,7 +52,114 @@
            class="com.cloudbees.eclipse.run.ui.popup.actions.OpenInBrowserAction"
            enablesFor="1"
            id="com.cloudbees.eclipse.run.ui.action.openInBrowser"
-           label="Open In Browser">
+           label="Open In Browser"
+           menubarPath="&quot;open&quot;">
+     </action>
+  </objectContribution>
+  <objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.delete"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+     <action
+           class="com.cloudbees.eclipse.run.ui.popup.actions.DeleteAction"
+           enablesFor="1"
+           id="com.cloudbees.eclipse.run.ui.action.delete"
+           label="Delete in RUN@cloud@"
+           menubarPath="&quot;run&quot;">
+     </action>
+  </objectContribution>
+		<objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.stop"
+        nameFilter="*"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+			<action
+         class="com.cloudbees.eclipse.run.ui.popup.actions.StopAction"
+         enablesFor="1"
+         id="com.cloudbees.eclipse.run.ui.deploy.cloud"
+         label="Stop in RUN@cloud@"
+         menubarPath="&quot;run&quot;">
+			</action>
+   <visibility>
+      <or>
+         <objectState
+               name="status"
+               value="hibernate">
+         </objectState>
+         <objectState
+               name="status"
+               value="active">
+         </objectState>
+      </or>
+   </visibility>
+		</objectContribution>
+		<objectContribution
+        adaptable="true"
+        id="com.cloudbees.eclipse.run.ui.start"
+        nameFilter="*"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+			<action
+         class="com.cloudbees.eclipse.run.ui.popup.actions.StartAction"
+         enablesFor="1"
+         id="com.cloudbees.eclipse.run.ui.deploy.cloud"
+         label="Start in RUN@cloud@"
+         menubarPath="&quot;run&quot;">
+			</action>
+   <visibility>
+      <and>
+         <objectState
+               name="status"
+               value="stopped">
+         </objectState>
+      </and>
+   </visibility>
+		</objectContribution>
+  <objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.tail.error"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+     <action
+           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailErrorLogAction"
+           enablesFor="1"
+           id="com.cloudbees.eclipse.run.ui.action.tail.error"
+           label="Tail Error Log"
+           menubarPath="&quot;tail&quot;">
+     </action>
+  </objectContribution>
+  <objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.tail.access"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+     <action
+           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailAccessLogAction"
+           enablesFor="1"
+           id="com.cloudbees.eclipse.run.ui.action.tail.access"
+           label="Tail Access Log"
+           menubarPath="&quot;tail&quot;">
+     </action>
+  </objectContribution>
+  <objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.tail.server"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+     <action
+           class="com.cloudbees.eclipse.run.ui.popup.actions.AbstractTailAction$TailServerLogAction"
+           enablesFor="1"
+           id="com.cloudbees.eclipse.run.ui.action.tail.server"
+           label="Tail Server Log"
+           menubarPath="&quot;tail&quot;">
+     </action>
+  </objectContribution>
+  <objectContribution
+        adaptable="false"
+        id="com.cloudbees.eclipse.run.ui.showProperties"
+        objectClass="com.cloudbees.api.ApplicationInfo">
+     <action
+           class="com.cloudbees.eclipse.run.ui.popup.actions.ShowPropertiesAction"
+           enablesFor="1"
+           id="com.cloudbees.eclipse.run.ui.action.showProperties"
+           label="Properties"
+           menubarPath="&quot;properties&quot;">
      </action>
   </objectContribution>
 	</extension>
