updated build properties

--- a/com.cloudbees.eclipse.core/build.properties
+++ b/com.cloudbees.eclipse.core/build.properties
@@ -11,4 +11,5 @@ bin.includes = META-INF/,\
                lib/httpclient-cache-4.1.jar,\
                lib/httpcore-4.1.jar,\
                lib/httpcore-nio-4.1.jar,\
-               lib/httpmime-4.1.jar
+               lib/httpmime-4.1.jar,\
+               scripts/
