--- a/com.cloudbees.eclipse.run.core/build.properties
+++ b/com.cloudbees.eclipse.run.core/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/com.cloudbees.eclipse.run.core.processLifecycleHook.exsd,\
                scripts/,\
-               projects/
+               projects/,\
+               schema/com.cloudbees.eclipse.run.core.statusUpdater.exsd
 jars.compile.order = .
 source.. = src/
 output.. = bin/
