--- a/com.cloudbees.eclipse.ui/build.properties
+++ b/com.cloudbees.eclipse.ui/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                intro/,\
-               plugin.properties
+               plugin.properties,\
+               schema/
 src.includes = icons/
