--- a/com.cloudbees.eclipse.ui/plugin.properties
+++ b/com.cloudbees.eclipse.ui/plugin.properties
@@ -1,7 +1,7 @@
 project.decorator.label = CloudBees Project
 
 cloudbees.popup.menu.label = CloudBees
-add.cloudbees.support.action.label = Add CloubBees support
+add.cloudbees.support.action.label = Add CloudBees support
 add.cloudbees.support.action.tooltip = Add support for CloudBees development to this project.
 remove.cloudbees.support.action.label = Remove CloudBees support
 remove.cloudbees.support.action.tooltip = Remove support for CloudBees development in this project.
